# hugging-mapper

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
docs/: conf.py  index.md  requirements.txt  sphinx_build.sh
docs/tutorial/: biome-tagging.ipynb  biome-tagging.py  huggingmapper-tutorial.ipynb  huggingmapper-tutorial.py  nodemapper-tutorial.ipynb  nodemapper-tutorial.py
docs/tutorial/assets/: biosamples-marine-sample.tsv
hugger/: __init__.py  mapper.py
tests/: test_mapper.py
