[project]
name = "hugging-mapper"
authors = [
  { name = "Angel L. P.", email = "59593766+angelphanth@users.noreply.github.com" },
]
description = "A lightweight python tool for effortless text similarity scoring using Hugging Face models"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "transformers>=4.57.6",
]

[project.urls]
"Documentation" = "https://hugging-mapper.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/angelphanth/hugging-mapper/issues"
"Homepage" = "https://github.com/angelphanth/hugging-mapper"

[tool.setuptools.packages.find]
include = ["hugger*"]

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 2
include_trailing_comma = true
use_parentheses = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/tutorial/#rule-selection
extend-select = ["E", "W", "F", "B"]
ignore = ["E501"]  # ignore line length for now

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ipykernel>=6.31.0",
    "isort>=8.0.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.15.8",
]
docs = [
    "ipywidgets>=8.1.8",
    "jupytext>=1.19.1",
    "myst-nb>=1.3.0",
    "python-dotenv>=1.2.2",
    "sphinx>=7.4.7",
    "sphinx-book-theme>=1.1.4",
    "sphinx-new-tab-link>=0.8.0",
]

[tool.setuptools_scm]
